# Zeplod

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  Kconfig  Kconfig_proprietary  LICENSE_COMMERCIAL.md  README.md  README_CN.md  app.overlay  prj.conf  prj_app_kv_persist.conf  prj_example_module_ipc.conf  prj_ipc_example.conf  prj_min.conf  prj_qemu.conf  prj_sram.conf  proprietary_modules.conf  west.yml  zephyr_app.env.template  zephyr_config.env  zephyr_config.env.template
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
boards/: app.overlay  mimxrt1050_fire_mimxrt1052_qspi.overlay  nucleo_l4r5zi.overlay  overlay.dts  qemu_arc_qemu_arc_em.overlay  qemu_cortex_a53.overlay  qemu_cortex_a53_qemu_cortex_a53_smp.overlay  qemu_cortex_a9.overlay  qemu_cortex_m0.overlay  qemu_cortex_m3.overlay  qemu_cortex_r5.overlay  qemu_kvm_arm64.overlay  qemu_leon3.overlay  qemu_malta.overlay  qemu_riscv32.overlay  qemu_riscv32_qemu_virt_riscv32_smp.overlay  qemu_riscv32_xip.overlay  qemu_riscv32e.overlay  qemu_riscv64.overlay  qemu_riscv64_qemu_virt_riscv64_smp.overlay  qemu_rx.overlay  qemu_x86.overlay  qemu_x86_64.overlay  qemu_x86_lakemont.overlay  qemu_x86_tiny.overlay  qemu_xtensa_dc233c.overlay
cmake/: zeplod_app_overlays.cmake
conf/: README.md
conf/examples/: gpio_uart.conf  module_ipc.conf
conf/features/: app_kv_persist.conf  boot_fast.conf  connectivity.conf  data_bus.conf  diag.conf  factory_mode.conf  feature_gate.conf  net_stub.conf  ota.conf  provisioning.conf  recovery.conf  remote_ops.conf  scale.conf  secure_kv.conf  sys_time.conf  thread_ipc.conf
conf/profiles/: balanced.conf  minimal.conf  sku_gateway.conf  standard.conf  tiny.conf
conf/targets/: mcuboot.conf  mcumgr_smp.conf  production.conf  qemu.conf
docs/: 5 分钟快速体验.md  CI平台配置保姆级手册.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  SIL2_FIX_SYSTEM_SERVICES.md  SIL2_REVIEW_IPC_SERVICE.md  SIL2_REVIEW_MODULE_MANAGER.md  SIL2_REVIEW_SYSTEM_SERVICES.md  Thread_IPC_Service模块使用说明.md  Zephyr应用开发与服务指南.md  Zephyr版本与CI说明.md  Zephyr设备树与内存配置手册.md  事件系统详细使用说明.md  单元测试与持续集成说明.md  参与贡献与代码规范.md  发布检查清单.md  常见问题与故障排除.md  开发者入门指南.md  开发者指南.md  文档改进建议.md  文档索引.md  术语速查卡片.md  框架核心技术实现细节.md  模块化软件设计方法论.md  模块化软件设计的详细方法.md  模块开发集成Thread_IPC指南.md  模块系统详细使用说明.md  烧录与调试快速指南.md  硬件测试运行指南.md  系统服务使用说明.md  项目配置项说明.md
docs/90-学习资源/: 91-嵌入式AI大模型工程师学习指南.md
docs/zh-CN/: QUICK_REFERENCE.md
include/zeplod/: app_banner.h  app_config.h  app_kv.h  app_main.h  app_version.h  connectivity_backend.h  connectivity_module.h  data_bus.h  event_dispatcher.h  event_system.h  event_system_compat.h  example_module_a.h  example_module_b.h  example_module_gpio.h  example_module_ipc.h  example_module_multi_dep.h  example_module_uart.h  factory_mode.h  feature_gate.h  ipc_service.h  ipc_service_event.h  ipc_shared_mem.h  lock_order.h  module_base.h  module_dependency_planner.h  module_manager.h  module_manager_compat.h  ota_module.h  ota_transport.h  provisioning_module.h  recovery_policy.h  remote_ops.h  remote_ops_backend.h  state_machine.h  sys_diag.h  sys_fault_dump.h  sys_log.h  sys_memory.h  sys_secure_kv.h  sys_time.h  (+4 more)
scripts/: analyze_map.bat  analyze_map.ps1  analyze_map.sh  build_all.bat  build_all.sh  bump_version.py  check_encoding.py  check_script_docs.py  doc_inventory.py  generate_docs.ps1  generate_docs.sh  lint_docs.py  module_config.py  package_release.ps1  package_release.sh  preflight_host_tests.py  project_layout.ps1  project_layout.py  project_layout.sh  proprietary_manage.bat  proprietary_manage.ps1  proprietary_manage.sh  qa.ps1  qa.sh  run_qemu.ps1  run_sanitizers.ps1  run_sanitizers.sh  run_tests.ps1  run_tests.sh  run_tests_full.ps1  run_tests_full.sh  run_tests_ipc.ps1  run_tests_ipc.sh  run_twister.ps1  run_twister.sh  serial_monitor.py  setup_env.bat  setup_env.ps1  setup_env.sh
src/app/: CMakeLists.txt  app_banner.h  app_config.h  app_kv.c  app_kv.h  app_main.c  app_main.h  app_shell.c  app_version.c  app_version.h  app_version_config.h.in
src/core/: CMakeLists.txt  event_dispatcher.c  event_dispatcher.h  event_dispatcher_autoinit.c  event_memory.c  event_memory.h  event_queue.c  event_queue.h  event_system.c  event_system.h  event_system_compat.c  event_system_compat.h  event_system_internal.h  event_system_lifecycle.c  event_system_memory.c  event_system_publish.c  event_system_pubsub.c  event_system_stats.c  lock_order.c  lock_order.h  state_machine.c  state_machine.h  zepl_thread_service.h
src/data_bus/: CMakeLists.txt  Kconfig  data_bus.c  data_bus.h  data_bus_channel.c  data_bus_channel.h  data_bus_consumer.c  data_bus_consumer.h  data_bus_event_bridge.c  data_bus_internal.h  data_bus_memory.c  data_bus_memory.h  data_bus_ready.c  data_bus_ready.h
src/modules/: CMakeLists.txt  example_module_a.c  example_module_a.h  example_module_b.c  example_module_b.h  example_module_gpio.c  example_module_gpio.h  example_module_ipc.c  example_module_ipc.h  (+17 more)
tests/: CMakeLists.txt  Kconfig  LIFECYCLE_CONTRACTS.md  README.md  prj.conf  prj_app_kv.conf  prj_block_overflow.conf  prj_ci_examples.conf  prj_concurrency_stress.conf  prj_connectivity.conf  prj_data_bus_optimized.conf  prj_factory.conf  prj_factory_no_kv.conf  prj_feature_gate.conf  prj_feature_gate_boot.conf  prj_native_sim.conf  prj_ota.conf  prj_provisioning.conf  prj_qemu_coverage.conf  prj_recovery.conf  prj_remote_ops.conf  prj_sys_diag.conf  prj_sys_secure_kv.conf  prj_sys_time.conf  prj_test_extensions.conf  prj_test_watchdog.conf  test_app_kv_migrate.c  test_concurrency_stress.c  test_connectivity_module.c  test_core_coverage.c  test_core_coverage_extended.c  test_data_bus.c  test_event_dispatcher.c  test_event_memory.c  test_event_queue.c  test_event_stubs.h  test_event_system.c  test_event_system_compat.c  test_example_module_a.c  test_example_module_b.c  (+24 more)
tests/boards/: nucleo_l4r5zi.overlay
tests/boards/st/nucleo_l4r5zi/: nucleo_l4r5zi.overlay
tests/lint_docs/: test_lint_docs.py
(+168 files in other folders)
